<resources>
    <string name="app_name">TEAM24P</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="n_n_sportify_n">אודות\nאז קצת על עצמנו \nאנחנו צוות פיתוח Sportify \nפועלים על מנת לחבר את קהילת התושבים בבאר שבע ופיתחנו לטובתם אפליקציה שתעזור ליצור מפגשים בין חבריים ובין תושבי העיר על מנת לאחד ולחבר את העיר בעזרת ענף הספורט.</string>
    <string name="maphelp">מפת האתרים \nבמפה שלנו תוכלו למצוא את כל המגרשים בבאר שבע\nעל מנת ליצור אירוע חדש יש להכנס למגרש הרצוי ולאחר מכן לבחור תאריך וללחוץ על הוספת משחק חדש</string>
    <string name="joinhelp">הצטרפות למשחק \nעל מנת להצטרף למשחק קיים\nיש להכנס לדף משחקי היום או להכנס למגרש שבו אתם מעוניינים להצטרף למשחק\nיש ללחוץ על המשחק ולאחר מכן להצטרף אליו</string>
    <string name="signhelp">הרשמה והתחברות \nכדי להשתמש באפליקציה ובפיצרים שהיא נותנת יש להרשם ולהתחבר לאפליקציה\nניתן לעשות זאת בעזרת מקש ההתחברות בתחתית הדף</string>
    <string name="chathelp">צאט \nעל מנת להתחבר לצאט שלנו יש ללחוץ על כפתור הצאט\nניתן להוסיף חברים על ידי חיפוש שלהם\nאישור בקשות חברות ושליחה של הודעות לכל אחד מהחברים שהוספנו</string>
    <string name="todayhelp">משחקי היום \nאם ברצונך לראות את משחקי היום יש ללחוץ על כפתור משחקי היום. משם תוכל להכנס לפרטי משחק בעזרת לחיצה על המגרש הרלוונטי לך ולהצטרף במידה ואתה מחובר וקיים מקום פנוי</string>
    <string name="credits">מקווים שתהנו באפליקציה שלנו ותיצרו קשרים ביחד עם תושבי באר שבע \nמפתחי האפליקציה\nגלעד קובי תמיר ואפיק</string>
</resources>
